overflow fixed

--- a/entries/textEN1/main.css
+++ b/entries/textEN1/main.css
@@ -5,8 +5,9 @@
     font-family: "source-han-serif-cn-subset", sans-serif;
     font-weight: 400;
     font-style: normal;
-    /* overflow: hidden; */
+    overflow-x: hidden;
     background-color: #f7f7f7;
+    
   }
 
   body{
