--- a/entries/textEN5/main.css
+++ b/entries/textEN5/main.css
@@ -5,7 +5,7 @@
     font-family: "source-han-serif-cn-subset", sans-serif;
     font-weight: 400;
     font-style: normal;
-    /* overflow: hidden; */
+    overflow-x: hidden;
     background-color: #f7f7f7;
   }
 
